<resources>
    <string name="app_name">CS408 Lab 2A</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_to_rock_paper_scissors">Welcome to Rock-Paper-Scissors!</string>
    <string name="please_choose_your_weapon">Please choose your weapon:</string>
    <string name="Scissors">Scissors</string>
    <string name="rock">Rock</string>
    <string name="paper">Paper</string>
</resources>
